<resources>
    <string name="app_name">AppStreet</string>
    <string name="codigo_produto">Codigo produto</string>
    <string name="nome">Nome</string>
    <string name="quantidade">Quantidade</string>
    <string name="preco">Preco</string>
    <string name="observacao">Observacao</string>
    <string name="endereco">Endereco</string>
    <string name="telefone">Telefone</string>
    <string name="descricao">Descricao</string>
    <string name="nome_produto">Nome Produto</string>
    <string name="deletarProdutoMessage">Deseja realmente Deletar este Produto?</string>
    <string name="deletarProdutoTitle">Deletar Produto</string>
    <string name="cancelar">Cancelar</string>
    <string name="deletar">Deletar</string>
</resources>
