<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FormularioProdutoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_formulario_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cortoolbar"
        app:titleTextColor="@color/corBranca"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/toolbarBranco"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/formulario_produto_codigo_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_formulario_produto">

        <EditText
            android:id="@+id/formulario_produto_codigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/codigo_produto"
            android:inputType="number"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/formulario_produto_nome_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintEnd_toEndOf="@id/formulario_produto_codigo_hint"
        app:layout_constraintStart_toStartOf="@id/formulario_produto_codigo_hint"
        app:layout_constraintTop_toBottomOf="@id/formulario_produto_codigo_hint">

        <EditText
            android:id="@+id/formulario_produto_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descricao"
            android:inputType="textAutoComplete"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/formulario_produto_quantidade_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintStart_toStartOf="@id/formulario_produto_nome_hint"
        app:layout_constraintTop_toBottomOf="@id/formulario_produto_nome_hint"
        app:layout_constraintEnd_toEndOf="@id/formulario_produto_nome_hint">

        <EditText
            android:id="@+id/formulario_produto_quantidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantidade"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/formulario_produto_preco_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintTop_toBottomOf="@id/formulario_produto_quantidade_hint"
        app:layout_constraintStart_toStartOf="@id/formulario_produto_quantidade_hint"
        app:layout_constraintEnd_toEndOf="@id/formulario_produto_quantidade_hint">

        <EditText
            android:id="@+id/formulario_produto_preco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/preco"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>