<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FormularioClienteActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_formulario_cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/toolbarBranco"
        app:titleTextColor="@color/corBranca"
        android:background="@color/cortoolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/formulario_cliente_nome_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_formulario_cliente">

        <EditText
            android:id="@+id/formulario_cliente_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:inputType="textAutoComplete"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/formulario_cliente_telefone_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintEnd_toEndOf="@id/formulario_cliente_nome_hint"
        app:layout_constraintStart_toStartOf="@id/formulario_cliente_nome_hint"
        app:layout_constraintTop_toBottomOf="@id/formulario_cliente_nome_hint">

        <EditText
            android:id="@+id/formulario_cliente_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefone"
            android:inputType="phone"
            android:maxLines="1"
            android:maxLength="15"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/formulario_cliente_endereco_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintEnd_toEndOf="@id/formulario_cliente_telefone_hint"
        app:layout_constraintStart_toStartOf="@id/formulario_cliente_telefone_hint"
        app:layout_constraintTop_toBottomOf="@id/formulario_cliente_telefone_hint">

        <EditText
            android:id="@+id/formulario_cliente_endereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/endereco"
            android:inputType="textAutoComplete"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/formulario_cliente_observacao_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintEnd_toEndOf="@id/formulario_cliente_endereco_hint"
        app:layout_constraintStart_toStartOf="@id/formulario_cliente_endereco_hint"
        app:layout_constraintTop_toBottomOf="@id/formulario_cliente_endereco_hint">

        <EditText
            android:id="@+id/formulario_cliente_observacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/observacao"
            android:lines="3"
            android:textAlignment="gravity"/>
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>